<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".utilities.ImageGameStart" >
    

    <LinearLayout
        android:id="@+id/quizViewer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"        
        android:gravity="center"
        android:orientation="vertical" >

    <ImageView
        android:id="@+id/gol_imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"        
        android:contentDescription="@null"
        android:src="@drawable/quiz_jug" />
    
        
     <RadioGroup
        android:id="@+id/radioChoices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:stretchColumns="*" >
    
	    <RadioButton
	        android:id="@+id/radioChoice1"
	        style="@style/image_answers"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/hints1" />
	
	    <RadioButton
	        android:id="@+id/radioChoice2"
	        style="@style/image_answers"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/hints2" />
	
	    <RadioButton
	        android:id="@+id/radioChoice3"
	        style="@style/image_answers"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/hints3" />
		
	    <RadioButton
	        android:id="@+id/radioChoice4"
	        style="@style/image_answers"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/hints4" />
	
    </RadioGroup>   
    
    <Button
        android:id="@+id/submit_button"
        style="@style/FancyButton" 
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_answer" 
        android:layout_margin="10dp"        
        android:onClick="submit"
        android:enabled="false" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"    
        android:gravity="left|center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/correctValView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/correctVal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            android:gravity="right|center">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_done"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/askedValView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/askedVal"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
      </LinearLayout>         	
    </LinearLayout>    
</LinearLayout>