<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_alphabet"
    android:orientation="vertical"
    tools:context=".utilities.AlphabetActivity" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/letter_icon"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:contentDescription="@null"
            android:src="@drawable/logo" />
    </LinearLayout>
    
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:stretchColumns="*" >

        <TableRow>

            <TextView
                android:id="@+id/tvUpperCase"
                style="@style/UpperCaseFont"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/capital_letter" />
            <TextView
                android:id="@+id/tvLowerCase"
                style="@style/LowerCaseFont"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/small_letter" />            
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/bottomBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/header_footer"
        android:gravity="bottom"
        android:stretchColumns="1" >

        <TableRow>
            <Button
                android:id="@+id/prevButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/previous_button" >
            </Button>

            <TextView
                android:id="@+id/footerCaption"
                android:layout_width="fill_parent"
                android:visibility="visible"
                style="@style/CaptionFont"                
                android:layout_gravity="center"
                android:text="@string/letter_icon_name">
            </TextView>

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/next_button" >
            </Button>
        </TableRow>
    </TableLayout>    
    
</LinearLayout>